<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:orientation="horizontal"
	android:id="@+id/layout_frame">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text=" "
			android:id="@+id/left_center_textview"
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:layout_margin="@dimen/activity_vertical_margin"
			android:textSize="24sp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="→"
			android:id="@+id/right_textview"
			android:layout_centerVertical="true"
			android:layout_toRightOf="@+id/left_center_textview"
			android:layout_toEndOf="@+id/left_center_textview"
			android:textSize="24sp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="←"
			android:id="@+id/left_textview"
			android:layout_centerVertical="true"
			android:layout_toLeftOf="@+id/left_center_textview"
			android:layout_toStartOf="@+id/left_center_textview"
			android:textSize="24sp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="↑"
			android:id="@+id/up_textview"
			android:layout_above="@+id/left_center_textview"
			android:layout_centerHorizontal="true"
			android:textSize="24sp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="↓"
			android:id="@+id/down_textview"
			android:layout_below="@+id/left_center_textview"
			android:layout_centerHorizontal="true"
			android:textSize="24sp"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/stick_text_forward"
			android:layout_above="@+id/up_textview"
			android:layout_centerHorizontal="true"
			android:textSize="24sp"
			android:id="@+id/keymap_stick_forward_button"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/stick_text_back"
			android:layout_below="@+id/down_textview"
			android:layout_centerHorizontal="true"
			android:textSize="24sp"
			android:id="@+id/keymap_stick_back_button"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/stick_text_left"
			android:layout_centerVertical="true"
			android:layout_toLeftOf="@+id/left_textview"
			android:layout_toStartOf="@+id/left_textview"
			android:id="@+id/keymap_stick_left_button"
			android:textSize="24sp"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/stick_text_right"
			android:id="@+id/keymap_stick_right_button"
			android:layout_centerVertical="true"
			android:layout_toRightOf="@+id/right_textview"
			android:layout_toEndOf="@+id/right_textview"
			android:textSize="24sp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/key_textview"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:textSize="24sp"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="[7]"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="false"
			android:id="@+id/keymap_left2_button"
			android:textSize="24sp"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/stick_text_turn_left"
			android:layout_below="@+id/keymap_left2_button"
			android:layout_alignParentLeft="true"
			android:id="@+id/keymap_left1_button"
			android:textSize="24sp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="[5]"
			android:id="@+id/btn5_textview"
			android:layout_toRightOf="@+id/keymap_left1_button"
			android:textSize="24sp"
			android:gravity="left"
			android:layout_alignTop="@+id/keymap_left1_button"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="7"
			android:id="@+id/btn7_textview"
			android:layout_alignParentTop="true"
			android:textSize="24sp"
			android:layout_toRightOf="@+id/keymap_left2_button"
			android:layout_below="@+id/keymap_left2_button"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/action_takeoff"
			android:id="@+id/keymap_takeoff_button"
			android:layout_alignParentTop="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:textSize="24sp"
			android:layout_marginRight="@dimen/quater_padding"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="11"
			android:id="@+id/btn11_textview"
			android:layout_alignBottom="@+id/keymap_takeoff_button"
			android:layout_toLeftOf="@+id/keymap_takeoff_button"
			android:layout_toStartOf="@+id/keymap_takeoff_button"
			android:textSize="24sp"/>
	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text=" "
			android:id="@+id/right_center_textview"
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:layout_margin="@dimen/activity_vertical_margin"
			android:textSize="24sp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="2"
			android:id="@+id/btn2_textview"
			android:layout_centerVertical="true"
			android:layout_toRightOf="@+id/right_center_textview"
			android:layout_toEndOf="@+id/right_center_textview"
			android:textSize="24sp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="4"
			android:id="@+id/btn4_textview"
			android:layout_centerVertical="true"
			android:layout_toLeftOf="@+id/right_center_textview"
			android:layout_toStartOf="@+id/right_center_textview"
			android:textSize="24sp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="3"
			android:id="@+id/btn3_textview"
			android:layout_below="@+id/right_center_textview"
			android:layout_centerHorizontal="true"
			android:textSize="24sp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="1"
			android:id="@+id/btn1_textview"
			android:layout_above="@+id/right_center_textview"
			android:layout_centerHorizontal="true"
			android:textSize="24sp"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/stick_text_up"
			android:id="@+id/keymap_up_button"
			android:layout_above="@+id/btn1_textview"
			android:layout_centerHorizontal="true"
			android:textSize="24sp"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/stick_text_down"
			android:id="@+id/keymap_down_button"
			android:layout_below="@+id/btn3_textview"
			android:layout_centerHorizontal="true"
			android:textSize="24sp"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/stick_text_turn_right"
			android:id="@+id/keymap_turn_right_button"
			android:layout_centerVertical="true"
			android:layout_toRightOf="@+id/btn2_textview"
			android:layout_toEndOf="@+id/btn2_textview"
			android:textSize="24sp"
			android:textAlignment="center"
			android:gravity="center_horizontal"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/stick_text_turn_left"
			android:id="@+id/keymap_turn_left_button"
			android:layout_centerVertical="true"
			android:layout_toLeftOf="@+id/btn4_textview"
			android:layout_toStartOf="@+id/btn4_textview"
			android:textSize="24sp"
			android:textAlignment="center"
			android:gravity="center_horizontal"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="[8]"
			android:id="@+id/keymap_right2_button"
			android:layout_alignParentTop="true"
			android:layout_alignParentRight="true"
			android:textSize="24sp"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/stick_text_turn_right"
			android:id="@+id/keymap_right1_button"
			android:layout_below="@+id/keymap_right2_button"
			android:layout_alignParentRight="true"
			android:textSize="24sp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="8"
			android:id="@+id/btn8_textview"
			android:layout_toLeftOf="@+id/keymap_right2_button"
			android:layout_toStartOf="@+id/keymap_right2_button"
			android:textSize="24sp"
			android:layout_alignTop="@+id/keymap_right1_button"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="[6]"
			android:id="@+id/btn6_textview"
			android:layout_toLeftOf="@+id/keymap_right1_button"
			android:layout_toStartOf="@+id/keymap_right1_button"
			android:textSize="24sp"
			android:gravity="right"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/action_landing"
			android:id="@+id/keymap_landing_button"
			android:layout_above="@+id/btn6_textview"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:textSize="24sp"
			android:layout_marginLeft="@dimen/quater_padding"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="12"
			android:id="@+id/btn12_textview"
			android:layout_alignBottom="@+id/keymap_landing_button"
			android:layout_toRightOf="@+id/keymap_landing_button"
			android:layout_toEndOf="@+id/keymap_landing_button"
			android:textSize="24sp"/>
	</RelativeLayout>
</LinearLayout>
